--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_icon_class: ^0.0.6
   font_awesome_flutter: ^10.7.0
   font_awesome_pro_flutter: ^0.0.3
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   flutter_test:
